Add git stow and move tmux bar to top

--- a/stows/tmux/.tmux.conf
+++ b/stows/tmux/.tmux.conf
@@ -8,6 +8,7 @@ set -g history-limit 1000000
 # Solarized theme
 # -----------------------------------------------------------------------------
 set -g status-right '#H'
+set-option -g status-position top
 
 # default statusbar colors
 set-option -g status-style bg=colour235,fg=green,default # fg/bg=base02
