--- a/stows/tmux/.tmux.conf
+++ b/stows/tmux/.tmux.conf
@@ -11,7 +11,7 @@ set -g status-right '#H'
 set-option -g status-position top
 
 # default statusbar colors
-set-option -g status-style bg=colour235,fg=green,default # fg/bg=base02
+set-option -g status-style bg=colour235,fg="${PROFILE_COLOR}",default # fg/bg=base02
 
 set-window-option -g status-left " #S "
 set-window-option -g status-left-length 20
@@ -21,15 +21,15 @@ set-window-option -g status-right " %H:%M %d-%b-%y "
 set-window-option -g status-right-style fg=black,bg=white
 
 # default window title colors
-set-window-option -g window-status-style fg=green,bg=black,dim
+set-window-option -g window-status-style fg="${PROFILE_COLOR}",bg=black,dim
 
 # active window title colors
 set-window-option -g window-status-current-format " #I:#W "
-set-window-option -g window-status-current-style fg=black,bg=green
+set-window-option -g window-status-current-style fg=black,bg="${PROFILE_COLOR}"
 
 # pane border
 set-option -g pane-border-style fg=white
-set-option -g pane-active-border-style fg=green
+set-option -g pane-active-border-style fg="${PROFILE_COLOR}"
 
 # message text
 set-option -g message-style bg=colour235,fg=colour166 #bg=base02, fg=orange
